# revreader

./: LICENSE  README.md  install.ps1  install.sh  requirements.txt  revreader  revreader.py  setup.cfg
.github/workflows/: publish-pypi.yml
aur/: .SRCINFO  PKGBUILD
