[metadata]
name = revreader
version = 1.0.0
author = rumyp
description = Minimal EPUB reader (terminal + Qt GUI)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/Rumyp/revreader
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = revreader
python_requires = >=3.8
install_requires =
    PySide6>=6.5

[options.entry_points]
console_scripts =
    revreader = revreader:main
